Fix UI spacing and add live demo links
- Fix legend arrow spacing in admin interface
- Add live Railway deployment links to README
- Include direct access URLs for admin and participant interfaces
- Add quick demo steps for immediate testing
- Reference deployment documentation for production setup

--- a/client/admin.html
+++ b/client/admin.html
@@ -507,7 +507,7 @@
             <div class="canvas-container" id="canvas-container">
                 <div class="legend" id="legend">
                     <div class="legend-title" onclick="toggleLegend()">
-                        Embedding Channels
+                        <span>Embedding Channels</span>
                         <span class="legend-toggle">▼</span>
                     </div>
                     <div class="legend-content">
